--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,78 +1,169 @@
+@font-face{
+    font-family: 'conf';
+    src:url(/font/Comfortaa-web/Comfortaa-VariableFont_wght.ttf);
+    font-weight: bold;
+    font-style: bold;
+  }
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    border: none;
+    outline: none;
 }
+
 :root{
-    --primary: #2E2E2E;
-    --secondary: #2E64FE;
-    --textColor: #E6E6E6;
-    --ext: #2ECCFA;
+    --primary: #212B38;
+    --secondary: #37465B;
+    --textColor: #08C6AB;
+    --ext: #95bbb4;
+
+    --transition: .4s ease;
+}
+
+html{
+    font-family: 'conf';
+    scroll-behavior: smooth;
 }
 
 body{
-    background-color: var(--primary);
-    color: var(--textColor);
+    background-image: url('/img/Nebula.jpg');
+    background-size: cover;
+}
+
+h1{
+    font-size: 60px;
+}
+
+h2{
+    font-size: 2rem;
+}
+
+h3{
+    font-size: 1.6rem;
+}
+
+h4{
+    font-size: 1.1rem;
+}
+
+h5{
+    font-size: .95rem;
+}
+
+h1, h2, h3, h4, h5{
+    color: var(--secondary);
+    line-height: 1.1;
+}
+
+a{
+    color: var(--ext);
+    transition: var(--transition);
+    font-family: 'conf';
+}
+
+section{
+    padding: 8rem 0;
+}
+
+section>h2{
+    text-align: center;
+}
+
+section>p{
+    text-align: center;
+    width: 40%;
+    margin: .5rem auto 4rem;
+}
+
+p{
+    line-height: 150%;
+    font-size: 17px;
+}
+
+img{
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+._btn{
+    display: inline-block;
+    width: fit-content;
+    font-weight: bold;
+}
+
+._btn:hover{
+    color: #212B38;
+}
+
+/*--------card------*/
+.card{
+    background: var(--ext);
+    padding: 1.5rem;
+    border: 2px solid transparent;
+    border-radius: 1.2rem;
+    transition: var(--transition);
+}
+
+.card:hover{
+    background: transparent;
+    border-color: var(--textColor);
+    transform: translateY(-.5rem);
+}
+
+.card-primary{
+    background: transparent;
+    border-color: var(--textColor);
+}
+
+.card-primary:hover{
+    background: var(--primary);
 }
 
 .container{
-    max-width: 1200px;
+    max-width: 1420px;
+    width: 90%;
     margin: 0 auto;
 }
 
-/* navbar */
-
+/*--- nav ---*/
 nav{
+    height: 5rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.nav-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 110px;
-    color:var(--textColor)
 }
 
-.menu{
+.menu-btn{
+    display: none;
+}
+
+.nav-links{
     display: flex;
-    list-style: none;
-    font-size: 1.5em;
-    text-transform:uppercase;
-}
-
-.menu li{
-    padding: 0px 4.5em;
-}
-
-.menu li a{
-    color:#424242;
-    cursor: pointer;
-}
-
-.menu li a:hover{
-    color: #BDBDBD;
-}
-
-/*hero section 2ECCFA DF0101*/
-.hero_section .row{
-    display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
-    height: 60vh;
+    gap: 5rem;
 }
 
-.col_hero_info h1{
-    font-size: 30px;
-    color: #6E6E6E;
-
-}
-
-.col_hero_info span{
-    font-size: 2em;
+.nav-links li a{
     color: var(--ext);
+    font-size: 17px;
+    transition: var(--transition);
+    text-decoration: none;
 }
 
-.col_hero_info p{
-    font-size: 1em;
-    width: 500px;
-    padding: 20px 0;
+.nav-links li:hover{
+    transform: translateY(-.5rem);
 }
