--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,7 @@
     text-decoration: none;
     border: none;
     outline: none;
+    font-family: 'conf';
 }
 
 :root{
@@ -29,9 +30,10 @@ html{
 }
 
 body{
-    
     background-image: url('/img/screen-display-device.com.jpg');
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: right top;
 }
 
 h1{
@@ -66,7 +68,7 @@ a{
 }
 
 section{
-    padding: 8rem 0;
+    padding: 1rem 0;
 }
 
 section>h2{
@@ -194,10 +196,12 @@ header{
     content: '';
     width: 1000%;
     right: -981%;
-    position: absolute;
+    /* position: fixed; */
+    position: fixed;
     height: 100%;
     z-index: -1;
     background-color: rgba(149, 187, 180, 0.2);
+    
 }
 
 .header-left h2{
@@ -213,6 +217,7 @@ header{
     font-size: 19px;
     width: 94%;
     margin: .5rem 0 2rem;
+    color: var(--ext);
 }
 
 .header-right{
@@ -286,3 +291,98 @@ header{
     transform: translateY(-.5rem);
 }
 /*--------end header------*/
+
+.card-text, .card-title{
+    font-size: 1rem;
+    padding: 0;
+}
+
+.card-text{
+    text-indent: 1em;
+    text-align: justify;
+    font-weight: lighter;
+}
+.card-title{
+    letter-spacing: 7px;
+}
+.card{
+    background: var(--secondary);
+    color: var(--ext);
+    margin: 1rem 7rem 7rem 7rem;
+ }
+.card:hover{
+    background: var(--primary);
+    color: var(--ext);
+}
+
+/* skill */
+#skill h2{
+    font-size: 3rem;
+}
+.progress{
+    background-color: rgba(149, 187, 180, 0.2);
+    height: 35px;
+    margin: 1em 7rem;
+    position: relative;
+}
+.progress img{
+    margin: .5em;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+}
+.progress h5{
+    margin: 10px 5px;
+}
+
+.out-row{
+    width: 100%;
+    height: .9rem;
+    background: var(--ext);
+    margin: .7rem 1rem;
+}
+
+.inner-row{
+    width: 100%;
+    height: .8rem;
+    background: var(--primary);
+}
+
+.progress:nth-child(1) .inner-row{
+    width: 87%!important;
+}
+.progress:nth-child(2) .inner-row{
+    width: 83%!important;
+}
+.progress:nth-child(3) .inner-row{
+    width: 67%!important;
+}
+.progress:nth-child(4) .inner-row{
+    width: 13%!important;
+}
+.progress:nth-child(5) .inner-row{
+    width: 20%!important;
+}
+.progress:nth-child(6) .inner-row{
+    width: 28%!important;
+}
+.progress:nth-child(7) .inner-row{
+    width: 24%!important;
+}
+.progress:nth-child(8) .inner-row{
+    width: 19%!important;
+}
+.progress:nth-child(9) .inner-row{
+    width: 17%!important;
+}
+.progress:nth-child(10) .inner-row{
+    width: 13%!important;
+}
+.progress:nth-child(11) .inner-row{
+    width: 13%!important;
+}
+.progress:nth-child(12) .inner-row{
+    width: 43%!important;
+}
