--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,10 +63,13 @@ h1, h2, h3, h4, h5{
 
 a{
     color: var(--ext);
-    
     font-family: 'conf';
 }
 
+.social-links-nav{
+    display: none;
+    list-style: none;
+}
 section{
     padding: 1rem 0;
 }
@@ -196,6 +199,7 @@ header{
     align-items: center;
     height: 100%;
     padding-top: 2.5rem;
+    margin-bottom: 2.5rem;
     gap: 2%;
     position: relative;
 }
@@ -210,6 +214,9 @@ header{
     z-index: -1;
     background-color: rgba(149, 187, 180, 0.2);
     
+}
+.header-left{
+    margin-bottom: 1rem;
 }
 
 .header-left h2{
@@ -446,4 +453,122 @@ footer{
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+/* ------------- media screem  ------------- */
+/* max-width 1200px */
+@media(max-width: 1200px){
+    h1{
+        font-size: 46px;
+    }
+}
+
+/* max-width 1024px */
+@media(max-width: 1024px){
+    /* nav-bar 
+    .nav-links{
+        display: none;
+    }
+    .header-container::after
+    */
+    
+    .header-left h2{
+        font-size: 1.5rem;
+    }
+    .header-left .card-text{
+        font-size: .9rem;
+    }
+    .menu-button{
+        display: inline-block;
+    }
+}
+
+/* max-width 910px */
+@media(max-width: 910px){
+    .header-container::after{
+        display: none;
+    }
+    #About .card{
+        margin: 1rem 3rem 7rem 3rem;
+    }
+    .social-links-nav{
+        display: flex;
+    }
+    .social-links{
+        display: none;
+    }
+}
+
+/* max-width 800px */
+@media(max-width: 800px){
+    header{
+        margin-top: 3rem;
+        height: 90%;
+    }
+    .header-container{
+        grid-template-columns: 1fr;
+        padding: 1rem 0 1rem 0;
+        text-align: center;
+    }
+    .header-right{
+        width: 400px;
+        height: 400px;
+        margin: 0 auto;
+        grid-row: 1;
+        padding-top: 2rem;
+        
+    }
+    .moon{
+        right: 45px;
+        top: 35px;
+    }
+    .portfolio-container{
+        gap: 0;
+    }
+
+    .container_portfolio_proyect{
+        width: 100%;
+    }
+    
+    .header-left{
+        background-color: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        margin: 0;
+        padding: 2rem;
+    }
+}
+
+/* max-width 799px */
+@media(max-width: 799px){
+    .social-links-nav{
+        display: none;
+    }
+    .social-links{
+        margin: 2rem 43% 0 43%;
+        display: flex;
+        position:relative;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2rem;
+    }
+    section{
+        padding: 0;  
+    }
+    .header-container{
+        margin-bottom: 0;
+    }
+    .progress{
+        margin: 1rem 2rem;
+    }
+    section{
+        padding: 1rem 0;
+    }
+}
+
+/* max-width 600px */
+@media(max-width: 600px){
+    .header-container{
+            margin-bottom: 0;
+    }
+    
 }
