--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,8 @@ body{
     background-image: url('/img/screen-display-device.com.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: cover;
+    background-position: center;
+    background-size: cover;
     
 }
 
