--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,7 +35,7 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    
+    max-width: 100%;
 }
 
 h1{
