--- a/estilos/style.css
+++ b/estilos/style.css
@@ -212,7 +212,7 @@ header{
     right: -981%;
     /* position: fixed; */
     position: fixed;
-    height: 100%;
+    height: 110vh;
     z-index: -1;
     background-color: rgba(149, 187, 180, 0.2);
     
