--- a/estilos/style.css
+++ b/estilos/style.css
@@ -155,9 +155,6 @@ nav{
     justify-content: space-between;
 }
 
-.menu-btn{
-    display: none;
-}
 
 ul{
     margin-bottom: 0;
@@ -177,6 +174,7 @@ ul{
 
 .nav-links li{
     transition: var(--transition);
+    list-style: none;
 }
 
 .nav-scroll{
@@ -459,14 +457,14 @@ footer{
 
 /* ------------- media screem  ------------- */
 /* max-width 1200px */
-@media(max-width: 1200px){
+@media screen and (max-width: 1200px){
     h1{
         font-size: 46px;
     }
 }
 
 /* max-width 1024px */
-@media(max-width: 1024px){
+@media screen and (max-width: 1024px){
     /* nav-bar 
     .nav-links{
         display: none;
@@ -481,12 +479,12 @@ footer{
         font-size: .9rem;
     }
     .menu-button{
-        display: inline-block;
+        justify-content: end;
     }
 }
 
 /* max-width 910px */
-@media(max-width: 910px){
+@media screen and (max-width: 910px){
     .header-container::after{
         display: none;
     }
@@ -502,7 +500,7 @@ footer{
 }
 
 /* max-width 800px */
-@media(max-width: 800px){
+@media screen and (max-width: 800px){
     header{
         margin-top: 3rem;
         height: 90%;
@@ -541,7 +539,7 @@ footer{
 }
 
 /* max-width 799px */
-@media(max-width: 799px){
+@media screen and (max-width: 799px){
     .social-links-nav{
         display: none;
     }
@@ -568,9 +566,38 @@ footer{
 }
 
 /* max-width 600px */
-@media(max-width: 600px){
+@media screen and (max-width: 600px){
     .header-container{
             margin-bottom: 0;
+    }
+    
+}
+
+/* max-width 530px */
+@media screen and (max-width: 530px){
+    /* .nav-links{
+        display: none;
+    } */
+    
+    .menu_bar{
+        position: absolute;
+        flex-direction: column;
+        justify-content: start;
+        align-items: end;
+        top: 0;
+        right: 0;
+        padding: 1rem;
+        width: auto;
+        height: 100vh;
+        gap: 1rem;
+        
+        background: linear-gradient(90deg, rgba(0, 0, 36, 0) 0%, rgb(0,212,255,0.1) 20%, rgba(2, 0, 36,0.9)100%);
+    }
+    .nav-links{
+        flex-direction: column;
+        gap: 1rem;
+        
+        align-items: end;
     }
     
 }
