--- a/estilos/style.css
+++ b/estilos/style.css
@@ -198,6 +198,7 @@ header{
     overflow: hidden;
     display: grid;
     align-items: center;
+    padding: 0 3%;
 }
 
 .header-container{
@@ -449,6 +450,10 @@ header{
 
 .h2_color{
     color: var(--ext);
+}
+
+#portfolio{
+    padding: 0 3%;
 }
 
 /* footer */
