--- a/estilos/style.css
+++ b/estilos/style.css
@@ -648,10 +648,35 @@ footer{
     .portfolio-projects{
         margin: 1rem 0;
     }
+    header{
+        padding: 0;
+    }
+    .header-right{
+        width: 300px;
+        height: 300px;
+        margin: 0 auto;
+        grid-row: 1;
+        padding-top: 1rem;
+        
+    }
+    .moon{
+        width: 2rem;
+        height: 2rem;
+        background: var(--ext);
+        border-radius: 50%;
+        position: absolute;
+        right: 25px;
+        top: 30px;
+        box-shadow: 0 0 1rem var(--secondary);
+    }
 }
 
 @media screen and (max-width:330px){
     html{
         max-width: 100vh;
     }
+    header{
+        padding: 0;
+    }
+    
 }
