--- a/css/styles.css
+++ b/css/styles.css
@@ -11272,8 +11272,8 @@ body {
 .container .card {
 
   position: relative;
-  width:220px;
-  height:250px;
+  width:10rem;
+  height:12rem;
   background:#2a2a2a;
   display: flex;
   justify-content: center;
